export { ConformanceService } from '../__generated__/unmango/dev/tdl/v1alpha1/conformance_connect';

export {
	type TestRequest,
	TestRequestSchema,
	type TestResponse,
	TestResponseSchema,
} from '../__generated__/unmango/dev/tdl/v1alpha1/conformance_pb';

export {
	type Constructor,
	ConstructorSchema,
	type Field,
	FieldSchema,
	type Function,
	FunctionSchema,
	type GenericParameter,
	GenericParameterSchema,
	type Modifier,
	ModifierSchema,
	type Spec,
	SpecSchema,
	type Type,
	TypeSchema,
} from '../__generated__/unmango/dev/tdl/v1alpha1/spec_pb';
